--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 /seg_train
 /seg_test
 /seg_pred
-/datasets
+archive.zip
+/datasets/INTEL/seg_test
+/datasets/INTEL/seg_pred
+/datasets/INTEL/seg_train
 /description_data
 /models
